# CPU-Task-Scheduler

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  Task.cpp  Task.h  fcfs.cpp  multilevel_queue.cpp  priority_scheduling.cpp  round_robin.cpp
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  greetings.yml
include/: scheduler.h
src/algorithms/: fcfs.cpp  multilevel_queue.cpp  priority_scheduling.cpp  round_robin.cpp  sjf.cpp  srtf.cpp
